<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">MDM</string>
    <string name="add_task">Add Device</string>
    <string name="edit_task">Update Device</string>
    <string name="task_marked_complete">Task marked complete</string>
    <string name="task_marked_active">Task marked active</string>
    <string name="loading_tasks_error">Error while loading tasks</string>
    <string name="completed_tasks_cleared">Completed tasks cleared</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_clear">Clear completed</string>
    <string name="menu_delete_task">Delete Device</string>
    <string name="navigation_view_header_title">BDWM-MDM</string>
    <string name="title_hint">Device Name</string>
    <string name="description_hint">Device Description</string>
    <string name="borrow_person_hint">Enter your name here</string>
    <string name="os_type">OS Type</string>
    <string name="os_version">OS Version</string>
    <string name="device_resolution">Device Resolution</string>
    <string name="device_assert_number">Device Assert Number</string>
    <string name="empty_task_message">New device information can not be empty</string>
    <string name="successfully_saved_task_message">Device Successfully saved</string>
    <string name="list_title">Device List</string>
    <string name="statistics_title">Statistics</string>
    <string name="statistics_no_tasks">You have no devices.</string>
    <string name="statistics_active_tasks">Active devices:</string>
    <string name="statistics_completed_tasks">Completed devices:</string>
    <string name="statistics_error">Error loading statistics.</string>
    <string name="no_data">No data</string>
    <string name="loading">LOADING</string>

    <string-array name="list_tasks_array">
        <item>@string/nav_all</item>
        <item>@string/nav_active</item>
        <item>@string/nav_completed</item>
    </string-array>
    <string name="nav_all">All Device</string>
    <string name="nav_active">Active Device</string>
    <string name="nav_completed">Completed Device</string>
    <string name="label_all">All Device</string>
    <string name="label_active">Active Device</string>
    <string name="label_completed">Completed Device</string>
    <string name="no_tasks_all">No Device!</string>
    <string name="no_tasks_active">No Active Device！</string>
    <string name="no_tasks_completed">No Completed Device！</string>
    <string name="no_tasks_add">Add a device item +</string>
    <string name="refresh">Refresh</string>

    <string name="cancle">取消</string>
    <string name="title">请选择时间</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>

    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
