<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/add_task_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_hint"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <EditText
            android:id="@+id/add_task_borrow_person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/borrow_person_hint"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/color1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:background="@null"
                android:gravity="center"
                android:text="@string/select_time"
                android:textColor="@color/color3"
                android:textSize="15sp" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/selectTime"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/color2"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:background="@null"
                android:gravity="center"
                android:text="@string/current_time"
                android:textColor="@color/color4"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/currentTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:gravity="center"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                android:textColor="@color/color5"
                android:textSize="15sp" />

        </RelativeLayout>

        <EditText
            android:id="@+id/add_task_os_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/os_type" />

        <EditText
            android:id="@+id/add_task_os_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/os_version" />

        <EditText
            android:id="@+id/add_task_device_resolution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/device_resolution" />

        <EditText
            android:id="@+id/add_task_device_assert_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/device_assert_number" />

        <EditText
            android:id="@+id/add_task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/description_hint" />

    </LinearLayout>
</ScrollView>

